環境変数 NPM_CONFIG_USERCONFIG の初期設定を追加

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       ENV LANG: ja_JP.UTF-8
       ENV LC_ALL: ja_JP.UTF-8
       EDITOR: code
-      NPM_CONFIG_USERCONFIG: /home/node/.npmrc
+      NPM_CONFIG_USERCONFIG: ${NPM_CONFIG_USERCONFIG:-/home/node/.npmrc}
 
 volumes:
   workspace-data:
