devcon-gnr:1.1 対応

--- a/build_devcon/.devcontainer/Dockerfile
+++ b/build_devcon/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/devcontainers/typescript-node:18-bookworm
+FROM mcr.microsoft.com/devcontainers/typescript-node:20-bookworm
 
 COPY ./menu /home/node/.fluxbox/menu
 COPY ./startup /home/node/.fluxbox/startup
@@ -7,7 +7,10 @@ COPY ./node.dot.npmrc /home/node/.npmrc
 
 RUN apt-get update && apt-get -y upgrade \
     && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install task-japanese fonts-vlgothic firefox-esr-l10n-ja chromium chromium-l10n ibus bash-completion iproute2 iputils-ping dnsutils \
+    && apt-get -y install task-japanese fonts-vlgothic \
+        ibus bash-completion \
+        firefox-esr-l10n-ja chromium chromium-l10n \
+        iproute2 iputils-ping dnsutils \
     && sed -i -E 's/# (ja_JP.UTF-8)/\1/' /etc/locale.gen \
     && locale-gen \
     && rm /etc/localtime \
